@@ -12,6 +12,7 @@ Version 0.1.3 (unreleased)
 * Added ability to show only unused words.
 * Improved readability of properties window.
 * Added ability to highlight characters in the grid in properties window.
+* Added ability to store arbitrary text with a puzzle.
 
 Version 0.1.2 (April 2, 2010)
 =============================
